--- a/Live-Video.ipynb
+++ b/Live-Video.ipynb
@@ -27,7 +27,7 @@
     "while True:\n",
     "    status , photo = cap.read()\n",
     "    grey_photo = cv2.cvtColor(photo , cv2.COLOR_BGR2GRAY)\n",
-    "    cv2.imshow('hi' , grey_photo)\n",
+    "    cv2.imshow('LIVE' , grey_photo)\n",
     "    if cv2.waitKey(10) == 13:\n",
     "        break\n",
     "        \n",
